[package]
authors = ["Jonas Platte <jplatte+git@posteo.de>"]
name = "mycelium"
version = "0.1.0"

[dependencies]
gio = "0.1.3"
mime_guess = "1.8.1"

[dependencies.gtk]
features = ["v3_14"]
version = "0.1.3"

[replace]
"glib:0.1.3" = { git = "https://github.com/gtk-rs/glib" }
"glib-sys:0.3.4" = { git = "https://github.com/gtk-rs/sys" }
"gobject-sys:0.3.4" = { git = "https://github.com/gtk-rs/sys" }
"gio:0.1.3" = { git = "https://github.com/gtk-rs/gio", rev = "56dd83eedcb24c998449ffb06e078633c43d9593" }
"gio-sys:0.3.4" = { git = "https://github.com/gtk-rs/sys" }
